# weatherapp

./: .env.example  README.md  db.sqlite3  pyproject.toml  requirement.txt
core/: settings.py  urls.py
weatherapp/: urls.py  views.py
